# hss1394

./: CHANGELOG.md  CMakeLists.txt  HSS1394Config.cmake.in  README.md  _h_s_s1394_8h.html  _h_s_s1394_8h_source.html  _h_s_s1394_types_8h.html  _h_s_s1394_types_8h_source.html  annotated.html  classes.html  classhss1394_1_1_channel-members.html  classhss1394_1_1_channel.html  classhss1394_1_1_channel_listener-members.html  classhss1394_1_1_channel_listener.html  classhss1394_1_1_listener-members.html  classhss1394_1_1_listener.html  classhss1394_1_1_node-members.html  classhss1394_1_1_node.html  classhss1394_1_1uint48-members.html  classhss1394_1_1uint48.html  classhss1394_1_1uint64-members.html  classhss1394_1_1uint64.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  namespacehss1394.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_type.html  namespaces.html  structhss1394_1_1_t_node_info-members.html  structhss1394_1_1_t_node_info.html
.github/workflows/: build.yml  docs.yml
code/builds/win32/: Test1394API.vcproj  libHSS1394.sln  libHSS1394.vcproj  libHSS1394_dll.vcproj  libHSS1394_dll_VC90.sln  libHSS1394_dll_VC90.vcproj
code/builds/win32/VS2005/: Test1394API.vcproj  libHSS1394.vcproj  libHSS1394_dll.vcproj
code/builds/win32/VS2008/: Test1394API.vcproj  libHSS1394.sln  libHSS1394.vcproj  libHSS1394_dll.vcproj
code/src/: 1394API.cpp  1394API.h  ConfigRom.cpp  Endian.h  HSS1394.cpp  Oxford1394Definitions.h  SConscript
code/src/osx/: 1394API_OSX.cpp
code/src/win32/: 1394API_VHPD1394.cpp
code/src/win32/Thesycon/: ReadMe.txt
code/src/win32/Thesycon/ST1394_ASIO/: ams1394ioctl.h
code/src/win32/Thesycon/VHPD1394/: CVhpd.cpp  CVhpd.h  CVhpdBuf.h  CVhpdNotifySlave.h  CVhpdThread.cpp  SetupApiDll.cpp  vhpd1394.h
doc/: Doxyfile
docs/: Doxyfile  Introduction.txt
examples/: CMakeLists.txt  TestHSS1394.cpp
inc/: HSS1394Types.h
include/: HSS1394.h
lib/ST1394_ASIO/: vhpd1394.h
lib/VHPD1394/: CVhpdAsyncSlave.h  CVhpdBuf.cpp  CVhpdDataSlave.h  CVhpdNotifySlave.cpp  CVhpdThread.h  spec1394.h
src/: 1394API_macOS.cpp  ConfigRom.h  HSS1394.cpp  ReadMe.txt  TestHSS1394.cpp
src/win32/Thesycon/ST1394_ASIO/: ams1394defs.h  ams1394stats.h  verdef.h
src/win32/Thesycon/VHPD1394/: CVhpdAsyncSlave.cpp  CVhpdDataSlave.cpp  CVhpdThread.cpp  SetupApiDll.h
